--- a/guide.html
+++ b/guide.html
@@ -91,9 +91,9 @@ Notes Guide
 | 1     | Weeks 1–2   | HTML, CSS, JavaScript fundamentals          |
 | 2     | Weeks 3–4   | Real-world mini-project + Git/GitHub basics |
 | 3     | Weeks 5–6   | JavaScript with APIs (OpenWeather API etc.) |
-| 4     | Weeks 7–8   | Firebase Intro: Auth, Firestore, Hosting    |
-| 5     | Weeks 9–10  | Final Project (CRUD + Auth + Hosting)       |
-| 6     | Weeks 11–12 | Portfolio, Resume, GitHub & LinkedIn Setup  |
+| 4     | Weeks 7 // 8   | Firebase Intro: Auth, Firestore, Hosting    |
+| 5     | Weeks 9 // 10  | Final Project (CRUD + Auth + Hosting)       |
+| 6     | Weeks 11 // 12 | Portfolio, Resume, GitHub & LinkedIn Setup  |
 
 
 
