--- a/guide.html
+++ b/guide.html
@@ -86,14 +86,13 @@ Notes Guide
 
 ### 📚 Learning Phases
 
-| Phase | Duration    | Focus                                       |
-| ----- | ----------- | ------------------------------------------- |
-| 1     | Weeks 1 // 2   | HTML, CSS, JavaScript fundamentals          |
-| 2     | Weeks 3 // 4   | Real-world mini-project + Git/GitHub basics |
-| 3     | Weeks 5 // 6   | JavaScript with APIs (OpenWeather API etc.) |
-| 4     | Weeks 7 // 8   | Firebase Intro: Auth, Firestore, Hosting    |
-| 5     | Weeks 9 // 10  | Final Project (CRUD + Auth + Hosting)       |
-| 6     | Weeks 11 // 12 | Portfolio, Resume, GitHub & LinkedIn Setup  |
+| Phase | Duration    | Focus       
+| 1     | Weeks 1 // 2   | HTML, CSS, JavaScript fundamentals          
+| 2     | Weeks 3 // 4   | Real-world mini-project + Git/GitHub basics 
+| 3     | Weeks 5 // 6   | JavaScript with APIs (OpenWeather API etc.) 
+| 4     | Weeks 7 // 8   | Firebase Intro: Auth, Firestore, Hosting    
+| 5     | Weeks 9 // 10  | Final Project (CRUD + Auth + Hosting)       
+| 6     | Weeks 11 // 12 | Portfolio, Resume, GitHub & LinkedIn Setup  
 
 
 ### 🔗 Reference Resources
@@ -104,9 +103,8 @@ Notes Guide
 * [Firebase Docs](https://firebase.google.com/docs)
 * [FreeCodeCamp](https://www.freecodecamp.org/)
 
----
 
-📂 **Tab 2: Week 1–2: HTML/CSS/JS Basics**
+📂 **Tab 2: Week 1 // 2: HTML/CSS/JS Basics**
 
 ### 🔹 Session 1: HTML Refresher
 
