--- a/guide.html
+++ b/guide.html
@@ -154,7 +154,9 @@ Notes Guide
 
 **Hands-on Task:**
 
-* Style the personal bio page
+
+
+*** Style the personal bio page
 
 ```css
 /* styles.css */
